tests/fixtures/invalid/str_bitand_set.py
# Cannot bitwise AND Str and Set[int]
x: str = "hello" & {1, 2, 3}
